--- a/new-gotbook/src/index.html
+++ b/new-gotbook/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NewGotbook</title>
+  <title>GOTBook - Chat with Winter is Coming</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
